# airbnb-clone-backend

./: pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py
categories/: models.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_experience_category_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py
